# ADVideoFusion

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
forms/: AICCChannelMdiSubWindow.hpp  AICCMdiSubWindow.hpp  AICCVideoMdiSubWindow.hpp
grpc/: grpctest.cpp  grpctest.h
grpc/proto/: user.proto
widgets/: multiplevideoform.cpp  multiplevideoform.h  multiplevideoform.ui
